# lasalle-wiki-tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fastapi_sse_contract.py  pyproject.toml  streaming.py  streaming_admin.py  streaming_auth.py  streaming_conversations.py
La Salle Wiki Tutor Design System/: README.md  SKILL.md  colors_and_type.css
La Salle Wiki Tutor Design System/fonts/: README.md
La Salle Wiki Tutor Design System/preview/: _card.css  brand-hero.html  brand-iconography.html  brand-logos.html  colors-dark.html  (+14 more)
agent/: __init__.py  catalog_wiki_tools.py  wiki_tutor_agent.py
catalog_wiki_api/: __init__.py  __main__.py  cli.py  search.py  store.py  synonyms.py  types.py
config/: settings.py
core/: auth.py  base_sse_adapter.py  base_streaming_agent.py  cancellation_registry.py  conversations_store.py  openai_event_interceptor.py  title_polisher.py  turn_trace_recorder.py
docs/: 00-correction-prompt.md  00-kickoff-prompt.md  01-exploration-findings.md  02-download-plan.md  03-storage-layout.md  04-knowledge-base-map.md  05-wiki-architecture.md  06-frontend.md  07-deploy.md  INDEX.md  aha.md
events/: __init__.py  manager.py  models.py  replay.py  smart_renderer.py  store.py  tracker.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
infra/: .gitignore  .terraform.lock.hcl  README.md  compute.tf  iam.tf  main.tf  network.tf  outputs.tf  parameters.tf  snapshots.tf  terraform.tfvars.example  variables.tf  versions.tf
paper/: .gitignore  README.md  diagrams.typ  main.typ  refs.bib  template.typ
scripts/: ask_tutor.py  build_embeddings.py  build_wiki.py  common.py  fetch_catalog.py  fetch_wiki.sh  publish_wiki.sh
tests/: test_api_contract.py  test_personas.py  test_search_failure_benchmark.py  test_search_ops.py
utils/: logger.py  mongo_connection.py
(+76 files in other folders)
