[project]
name = "lasalle-catalog"
version = "0.1.0"
description = "Local mirror and wiki source for the La Salle Campus Barcelona academic catalog"
requires-python = ">=3.13"
dependencies = [
    # Phase 2/3: scraper + wiki builder
    "requests>=2.31",
    "lxml>=5.0",
    "tenacity>=8.2",
    "typer>=0.12",
    "markdownify>=0.13",
    "pyyaml>=6.0",
    "model2vec>=0.3",
    "numpy>=1.26",
    # Phase 4: agent + streaming API (ported from lqc-ai-assistant-lib)
    "agno==2.5.14",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pymongo[aws]>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
]
paper-figs = [
    "matplotlib>=3.10.9",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts", "catalog_wiki_api", "events", "core", "utils", "config", "agent"]
